# Proyecto_final_ml

./: Readme.md  pyproject.toml
Cuadernos/: evaluacion_datos_sobre_obesidad.ipynb
