[tool.poetry]
name = "proyecto-final-ml"
version = "0.1.0"
description = "Proyecto_final_ml"
authors = ["Javier callejas cardozo <javie.cardozo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13"
numpy = "^2.1.3"
scipy = "^1.14.1"
plotly = "^5.24.1"
statsmodels = "^0.14.4"
nltk = "^3.9.1"
tqdm = "^4.67.0"
joblib = "^1.4.2"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
